--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
 
         .descriptionCardJ1 h3 {
-            color: rgb(196, 124, 30);
+            color: rgb(216, 163, 93);
             font-size: 35px;
             font-weight: 550;
             text-align: center;
@@ -158,7 +158,7 @@
         <div class="cardJ1">
 
             <div class="imageCardJ1Container">
-                <img src="Asset/UI-UX-img.png" alt="" class="imageCardJ1">
+                <img src="Asset/3D_imgCodeur.jpeg" alt="" class="imageCardJ1">
             </div>
 
             <div class="infoCardJ1">
