--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>CardJ1 J1</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
         * {
             margin: 0;
@@ -94,7 +96,8 @@
             margin: 100px 10px 10px 10px;
             box-shadow: 10px 10px 12px rgb(141, 141, 141), -10px -10px 10px rgb(131, 131, 131);
         }
-        .switchJ2{
+
+        .switchJ2 {
             display: flex;
             justify-content: space-between;
             padding: 10px 20px 10px;
@@ -139,17 +142,317 @@
             text-align: start;
             padding: 0 0 5px;
         }
+
         .descriptionCardJ2 hr {
             color: rgb(49, 49, 49);
             color: rgb(156, 156, 156);
             background-color: aliceblue;
-            margin: 10px 0 10px ;
+            margin: 10px 0 10px;
+        }
+
+        .stepBlockJ3 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            padding: 50px 10px 10px;
+            background-color: rgb(245, 245, 245);
+        }
+
+        .stepBlockJ3 .type {
+            color: rgb(160, 160, 160);
+        }
+
+        .stepBlockJ3 .titleBlock {
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .stepBlockJ3 .listBlock {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .stepBlockJ3 .Card {
+            background-color: rgb(233, 233, 233);
+            padding: 50px 20px 20px;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            width: 200px;
+        }
+
+        .stepBlockJ3 .numberCard {
+            background-color: rgb(102, 223, 102);
+            color: aliceblue;
+            width: 45px;
+            height: 45px;
+            border-radius: 100%;
+            position: absolute;
+            top: -30px;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            align-items: center;
+
+
+        }
+
+        .stepBlockJ3 .titleCard {
+            font-weight: bold;
+            font-size: 18px;
+            padding-bottom: 15px;
+        }
+
+        .stepBlockJ3 .text {
+            font-size: 14px;
+            color: rgb(95, 95, 95);
+            text-align: center;
+        }
+
+
+        .stepBlockJ4 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            padding: 50px 10px 10px;
+            background-color: rgb(245, 245, 245);
+        }
+
+        .stepBlockJ4 .type {
+            color: rgb(160, 160, 160);
+        }
+
+        .stepBlockJ4 .titleBlock {
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .stepBlockJ4 .listBlock {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+            margin-top: 10px;
+            margin-bottom: 50px;
+        }
+
+        .stepBlockJ4 .Card {
+            /* background-color: rgb(255, 255, 255); */
+            padding: 50px 20px 20px;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            width: 200px;
+        }
+
+        .stepBlockJ4 .Card img {
+            padding: 0 0 20px;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 100%;
+        }
+
+        .stepBlockJ4 .fleche {
+            /* background-color: rgb(71, 71, 71); */
+            color: rgb(87, 87, 87);
+            border-radius: 100%;
+            position: absolute;
+            top: 120px;
+            right: -25px;
+            font-size: 18px;
+
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            align-items: center;
+        }
+
+        .stepBlockJ4 .titleCard {
+            padding-bottom: 15px;
+            color: rgb(160, 160, 160);
+        }
+
+        .stepBlockJ4 .text {
+            font-size: 14px;
+            color: rgb(95, 95, 95);
+            text-align: center;
+        }
+
+
+        .aboutBlockJ5 {
+            display: flex;
+            align-items: center;
+            width: 80%;
+            padding: 50px 10px 80px;
+            background-color: rgb(245, 245, 245);
+        }
+
+        .aboutBlockJ5 .detail {
+            margin: 50px;
+            width: 50%;
+        }
+
+        .aboutBlockJ5 .nameCompany {
+            color: rgb(160, 160, 160);
+        }
+
+        .aboutBlockJ5 .title {
+            font-size: 20px;
+        }
+
+        .aboutBlockJ5 .text {
+            font-size: 14px;
+            color: #4e4e4e;
+            margin-top: 20px;
+            line-height: 25px;
+        }
+
+        .aboutBlockJ5 .aboutImg {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-top: 10px;
+            margin-bottom: 50px;
+            margin: 30px;
+            width: 50%;
+        }
+
+        .aboutBlockJ5 .aboutImg img {
+            width: 200px;
+        }
+
+        .aboutBlockJ6 {
+            display: flex;
+            align-items: center;
+            width: 80%;
+            padding: 50px 10px 80px;
+            background-color: rgb(245, 245, 245);
+        }
+
+        .aboutBlockJ6 .detail {
+            margin: 50px;
+            width: 30%;
+        }
+
+        .aboutBlockJ6 .nameCompany {
+            color: rgb(160, 160, 160);
+        }
+
+        .aboutBlockJ6 .title {
+            font-size: 20px;
+        }
+
+        .aboutBlockJ6 .text {
+            font-size: 14px;
+            color: #4e4e4e;
+            margin-top: 20px;
+            line-height: 25px;
+            width: 250px;
+        }
+
+        .aboutBlockJ6 .description {
+            font-size: 14px;
+            color: #4e4e4e;
+            margin-top: 20px;
+            line-height: 25px;
+            margin-top: 10px;
+            margin-bottom: 50px;
+            margin: 30px;
+            width: 50%;
+        }
+        .aboutBlockJ6 .detail button {
+            background-color: rgb(102, 223, 102);
+            color: aliceblue;
+            width: 170px;
+            padding: 10px;
+            border-radius: 20px;
+            border: none;
         }
 
 
 
+        @media only screen and (max-width:780px) {
+            .stepBlockJ3 .listBlock {
+                grid-template-columns: 1fr;
+                gap: 50px;
+                margin-top: 50px;
+                margin-bottom: 30px;
+            }
 
-        @media only screen and (max-width:780px) {}
+            .stepBlockJ4 .listBlock {
+                grid-template-columns: 1fr;
+                gap: 0;
+                margin-top: 20px;
+                margin-bottom: 30px;
+            }
+
+            .stepBlockJ4 .fleche {
+                position: absolute;
+                top: 100%;
+                right: 0;
+                left: 0;
+                font-size: 18px;
+                transform: rotate(90deg);
+            }
+
+
+            .aboutBlockJ5 {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 80%;
+                padding: 50px 10px 10px;
+                background-color: rgb(245, 245, 245);
+            }
+
+            .aboutBlockJ5 .detail {
+                margin: 0px;
+                width: 80%;
+            }
+
+            .aboutBlockJ5 .aboutImg {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 20px;
+                margin-top: 10px;
+                margin-bottom: 50px;
+                margin-top: 50px;
+                width: 80%;
+            }
+
+            .aboutBlockJ5 .aboutImg img {
+                width: 100%;
+            }
+
+            .aboutBlockJ6 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            padding: 50px 10px 80px;
+            background-color: rgb(245, 245, 245);
+        }
+
+        .aboutBlockJ6 .detail {
+            margin: 30px;
+            width: 80%;
+        }
+        .aboutBlockJ6 .description {
+            margin: 20px;
+            width: 80%;
+        }
+        }
     </style>
 </head>
 
@@ -194,7 +497,7 @@
                     <p>Lorem ipsum dolor sit, consectetur.</p>
                     <hr>
                     <p>Lorem ipsum dolor sit, consectetur.</p>
-                    
+
                     <br>
                     <!-- <button type="submit" class="ajoutPanierCardJ2">Ajouter au panier</button> -->
                 </div>
@@ -202,6 +505,123 @@
 
         </div>
     </div>
+    <br><br><br>
+
+    <div class="center">
+        <div class="stepBlockJ3">
+            <div class="type">Steps</div>
+            <div class="titleBlock">How it Works</div>
+            <div class="listBlock">
+                <div class="Card">
+                    <div class="numberCard">1</div>
+                    <div class="titleCard">Helico</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, harum.</div>
+                </div>
+
+                <div class="Card">
+                    <div class="numberCard">2</div>
+                    <div class="titleCard">Bluid</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, harum.</div>
+                </div>
+
+                <div class="Card">
+                    <div class="numberCard">3</div>
+                    <div class="titleCard">Start</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, harum.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br><br><br>
+    <br><br><br>
+    <div class="center">
+        <div class="stepBlockJ4">
+            <div class="type">Steps</div>
+            <div class="titleBlock">How it Works</div>
+            <div class="listBlock">
+                <div class="Card">
+                    <div class="fleche">
+                        <span class="material-symbols-outlined">
+                            arrow_right_alt
+                        </span>
+                    </div>
+                    <img src="Asset/img3D1.jpg" alt="">
+                    <div class="titleCard">Step 1</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+
+                <div class="Card">
+                    <div class="fleche">
+                        <span class="material-symbols-outlined">
+                            arrow_right_alt
+                        </span>
+                    </div>
+                    <img src="Asset/img3D2.jpg" alt="">
+                    <div class="titleCard">Step 2</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+
+                <div class="Card">
+                    <!-- <div class="fleche">-></div> -->
+                    <img src="Asset/img3D3.jpg" alt="">
+                    <div class="titleCard">Step 3</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br><br>
+    <br><br><br>
+
+    <div class="center">
+        <div class="aboutBlockJ5">
+            <div class="detail">
+                <div class="nameCompany">About Us</div>
+                <h2 class="title">About Us</h2>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempora deleniti ex
+                    optio nisi perferendis excepturi repellendus amet?
+                    <br><br>
+                    A voluptate sunt ipsa quo ad dolore deserunt
+                    incidunt tenetur animi unde?.
+                </div>
+
+            </div>
+            <div class="aboutImg"><img src="Asset/img3D1.jpg" alt=""><img src="Asset/img3D1.jpg" alt=""><img
+                    src="Asset/img3D1.jpg" alt=""><img src="Asset/img3D1.jpg" alt="">
+            </div>
+
+        </div>
+    </div>
+    <br><br><br>
+    <br><br><br>
+
+    <div class="center">
+        <div class="aboutBlockJ6">
+            <div class="detail">
+                <div class="nameCompany">About Us</div>
+                <h2 class="title">About Us</h2>
+                <div class="text">
+                    A voluptate sunt ipsa quo
+                    incidunt tenetur animi unde?
+
+                    <br><br>
+                    <button>Contact Personnel</button>
+                </div>
+
+            </div>
+            <div class="description">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, vero blanditiis quas at.</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia fuga? Dignissimos,
+                    asperiores! Cum obcaecati deleniti nemo rerum numquam eum iusto iure suscipit.
+                </p>
+            </div>
+
+        </div>
+    </div>
+    <br><br><br>
+    <br><br><br>
     <br><br><br>
 </body>
 
